# http_halforms

./: Cargo.toml  LICENSE  README.md
src/: axum.rs  hal.rs  lib.rs  response.rs  utils.rs  values.rs
src/hal/: hal.rs  link.rs  option.rs  property.rs  template.rs
src/hal/link/: link_hints.rs
src/utils/: single_multiple.rs
