[package]
name = "http_halforms"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Support for HAL and HAL-FORMS responses in HTTP APIs"
homepage = "https://github.com/sazzer/http_halforms/"
repository = "https://github.com/sazzer/http_halforms/"
readme = "README.md"
keywords = ["http", "hal", "halforms"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.6.1", optional = true}
derive_more = "0.99.17"
headers-core = "0.2.0"
http = "0.2.8"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }

[dev-dependencies]
assert2 = "0.3.7"
headers = "0.3.8"
hyper = { version = "0.14.23", features = ["full"] }
insta = { version = "1.23.0", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }

[features]
axum = ["dep:axum"]
