[package]
name = "http_halforms"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Support for HAL and HAL-FORMS responses in HTTP APIs"
homepage = "https://github.com/sazzer/http_halforms/"
repository = "https://github.com/sazzer/http_halforms/"
readme = "README.md"
keywords = ["http", "hal", "halforms"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.7.1", optional = true }
derive_more = "0.99.17"
headers-core = "0.3.0"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }

[dev-dependencies]
assert2 = "0.3.11"
axum-test = "14.0.0-rc.1"
headers = "0.4.0"
hyper = { version = "1.0.1", features = ["full"] }
insta = { version = "1.34.0", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }

[features]
axum = ["dep:axum"]
