[package]
name = "http_halforms"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Support for HAL and HAL-FORMS responses in HTTP APIs"
homepage = "https://github.com/sazzer/http_halforms/"
repository = "https://github.com/sazzer/http_halforms/"
readme = "README.md"
keywords = ["http", "hal", "halforms"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
axum = { version = "0.8.1", optional = true }
derive_more = { version = "2.0.1", features = ["display"] }
headers-core = "0.3.0"
http = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }

[dev-dependencies]
assert2 = "0.3.15"
axum-test = "17.2.0"
headers = "0.4.0"
hyper = { version = "1.6.0", features = ["full"] }
insta = { version = "1.42.1", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }

[features]
axum = ["dep:axum"]
